--- a/index.html
+++ b/index.html
@@ -4,211 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MopiHub Fake Video</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      overflow-x: hidden;
-      color: #fff;
-    }
-
-    /* AGE POPUP */
-    .age-popup {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      text-align: center;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 20px rgba(255, 153, 0, 0.5);
-    }
-
-    .age-popup h1 {
-      font-size: 36px;
-      margin-bottom: 15px;
-      font-weight: bold;
-      color: #f90;
-    }
-
-    .age-popup p {
-      font-size: 20px;
-      margin-bottom: 30px;
-      color: #ccc;
-    }
-
-    .age-popup button {
-      background: #f90;
-      border: none;
-      padding: 14px 28px;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 6px;
-      margin: 10px;
-      font-weight: bold;
-      transition: background 0.3s ease;
-      width: 200px;
-    }
-
-    .age-popup button:hover {
-      background: #e68000;
-    }
-
-    /* HEADER WITH LOGO */
-    .header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: #111;
-      color: #fff;
-      padding: 15px 25px;
-      font-size: 24px;
-      font-weight: bold;
-      text-align: center;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
-      z-index: 1000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .header img {
-      width: 100px;
-      vertical-align: middle;
-      margin-right: 10px;
-      max-width: 100%;
-      height: auto;
-    }
-
-    .header span {
-      color: #f90;
-    }
-
-    /* MAIN CONTAINER */
-    .main-container {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      padding: 80px 20px 40px;
-    }
-
-    /* FAKE VIDEO STYLE */
-    .fake-video {
-      width: 100%;
-      max-width: 720px;
-      aspect-ratio: 16 / 9;
-      background-image: url('https://i.ibb.co/SXy9FcgL/download.jpg');
-      background-size: cover;
-      background-position: center;
-      position: relative;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 0 20px rgba(255, 153, 0, 0.2);
-      filter: blur(3px);
-      transition: 0.3s ease;
-    }
-
-    .fake-video:hover {
-      filter: blur(1.5px);
-    }
-
-    .fake-video .loader {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 60px;
-      height: 60px;
-      border: 6px solid rgba(255,255,255,0.2);
-      border-top: 6px solid #f90;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      transform: translate(-50%, -50%);
-      z-index: 2;
-    }
-
-    @keyframes spin {
-      0% { transform: translate(-50%, -50%) rotate(0deg); }
-      100% { transform: translate(-50%, -50%) rotate(360deg); }
-    }
-
-    /* GRID OF FAKE VIDEOS - ONE IMAGE PER LINE */
-    .video-grid {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      width: 100%;
-      max-width: 960px;
-      margin-top: 100px;
-    }
-
-    .video-link {
-      display: block;
-      position: relative;
-      border-radius: 8px;
-      overflow: hidden;
-      cursor: pointer;
-    }
-
-    /* Responsive Media Queries */
-    @media (max-width: 768px) {
-      .header {
-        padding: 10px;
-      }
-
-      .header img {
-        width: 80px;
-      }
-
-      .age-popup h1 {
-        font-size: 28px;
-      }
-
-      .age-popup p {
-        font-size: 18px;
-      }
-
-      .age-popup button {
-        width: 180px;
-        font-size: 16px;
-      }
-
-      .main-container {
-        padding: 60px 20px 20px;
-      }
-
-      .fake-video {
-        max-width: 100%;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .header img {
-        width: 60px;
-      }
-
-      .age-popup h1 {
-        font-size: 24px;
-      }
-
-      .age-popup p {
-        font-size: 16px;
-      }
-
-      .age-popup button {
-        width: 150px;
-        font-size: 14px;
-      }
-    }
-
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -263,12 +59,7 @@
 
   </div>
 
-  <script>
-    function enterSite() {
-      document.getElementById('agePopup').style.display = 'none';
-      document.getElementById('mainContainer').style.display = 'flex';
-    }
-  </script>
+  <script src="scripts.js"></script>
 
 </body>
 </html>
