--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MopiHub Fake Video</title>
+  <title>XoticVibe</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -19,7 +19,7 @@
   <!-- HEADER WITH LOGO -->
   <div class="header">
     <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="MopiHub Logo" />
-    <span>MopiHub Video</span>
+    <span>XoticVibe</span>
   </div>
 
   <!-- MAIN SECTION -->
