--- a/index.html
+++ b/index.html
@@ -3,42 +3,63 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fake Video Site</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>MopiHub Fake Video</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- Age Verification Popup -->
- <div class="age-popup" id="agePopup">
-  <div class="popup-content">
-    <h1>Are you 18 or older?</h1>
-    <p>This website contains adult content.<br>Please confirm your age to continue.</p>
-    <div class="popup-buttons">
-      <button onclick="enterSite()">Yes, I am 18+</button>
-      <button onclick="denyAccess()">No, take me back</button>
-    </div>
-    <div class="popup-footer">
-      <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
-      <span>AdultZone</span>
-    </div>
+  <!-- AGE GATE -->
+  <div class="age-popup" id="agePopup">
+    <h1>Age Verification</h1>
+    <p>This site contains adult content. You must be 18+ to enter.</p>
+    <button onclick="enterSite()">I am 18+</button>
+    <button onclick="alert('Access Denied')">I am under 18</button>
   </div>
-</div>
 
-
-  <!-- Header -->
+  <!-- HEADER WITH LOGO -->
   <div class="header">
-    <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
-    <span>AdultZone</span>
+    <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="MopiHub Logo" />
+    <span>MopiHub Video</span>
   </div>
 
-  <!-- Main Video Grid -->
+  <!-- MAIN SECTION -->
   <div class="main-container" id="mainContainer">
-    <div class="video-grid" id="videoGrid">
-      <!-- Fake Video Thumbnails -->
-      <!-- Will be injected via JS -->
+
+    <!-- Top Featured Fake Player -->
+    <a href="#" class="video-link">
+      <div class="fake-video">
+        <div class="loader"></div>
+      </div>
+    </a>
+
+    <!-- Grid of More Fake Videos -->
+    <div class="video-grid">
+      <a href="#" class="video-link">
+        <div class="fake-video"><div class="loader"></div></div>
+      </a>
+      <a href="#" class="video-link">
+        <div class="fake-video"><div class="loader"></div></div>
+      </a>
+      <a href="#" class="video-link">
+        <div class="fake-video"><div class="loader"></div></div>
+      </a>
+      <a href="#" class="video-link">
+        <div class="fake-video"><div class="loader"></div></div>
+      </a>
+      <a href="#" class="video-link">
+        <div class="fake-video"><div class="loader"></div></div>
+      </a>
+      <a href="#" class="video-link">
+        <div class="fake-video"><div class="loader"></div></div>
+      </a>
+      <a href="#" class="video-link">
+        <div class="fake-video"><div class="loader"></div></div>
+      </a>
     </div>
+
   </div>
 
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
+
 </body>
 </html>
