--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
 
   <!-- AGE GATE -->
-  <div class="age-popup" id="agePopup">
-    <h1>Age Verification</h1>
-    <p>This site contains adult content. You must be 18+ to enter.</p>
-    <button onclick="enterSite()">I am 18+</button>
-    <button onclick="alert('Access Denied')">I am under 18</button>
-  </div>
+<div class="popup-content">
+  <h1>Are you 18 or older?</h1>
+  <p>This website contains adult content.<br>Please confirm your age to continue.</p>
+  <button onclick="enterSite()">Yes, I am 18+</button>
+  <button onclick="denyAccess()">No, take me back</button>
+</div>
+
 
   <!-- HEADER WITH LOGO -->
   <div class="header">
