--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
 
-  <!-- AGE GATE -->
-<div class="popup-content">
-  <h1>Are you 18 or older?</h1>
-  <p>This website contains adult content.<br>Please confirm your age to continue.</p>
-  <button onclick="enterSite()">Yes, I am 18+</button>
-  <button onclick="denyAccess()">No, take me back</button>
+<div class="age-popup" id="agePopup">
+  <div class="popup-content">
+    <h1>Are you 18 or older?</h1>
+    <p>This website contains adult content.<br>Please confirm your age to continue.</p>
+    <div class="popup-buttons">
+      <button onclick="enterSite()">Yes, I am 18+</button>
+      <button onclick="denyAccess()">No, take me back</button>
+    </div>
+    <div class="popup-footer">
+      <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
+      <span>AdultZone</span>
+    </div>
+  </div>
 </div>
 
 
