--- a/index.html
+++ b/index.html
@@ -23,51 +23,20 @@
   </div>
 </div>
 
-
-  <!-- HEADER WITH LOGO -->
+ <!-- Header -->
   <div class="header">
-    <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="MopiHub Logo" />
-    <span>MopiHub Video</span>
+    <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
+    <span>AdultZone</span>
   </div>
 
-  <!-- MAIN SECTION -->
+  <!-- Main Video Grid -->
   <div class="main-container" id="mainContainer">
-
-    <!-- Top Featured Fake Player -->
-    <a href="#" class="video-link">
-      <div class="fake-video">
-        <div class="loader"></div>
-      </div>
-    </a>
-
-    <!-- Grid of More Fake Videos -->
-    <div class="video-grid">
-      <a href="#" class="video-link">
-        <div class="fake-video"><div class="loader"></div></div>
-      </a>
-      <a href="#" class="video-link">
-        <div class="fake-video"><div class="loader"></div></div>
-      </a>
-      <a href="#" class="video-link">
-        <div class="fake-video"><div class="loader"></div></div>
-      </a>
-      <a href="#" class="video-link">
-        <div class="fake-video"><div class="loader"></div></div>
-      </a>
-      <a href="#" class="video-link">
-        <div class="fake-video"><div class="loader"></div></div>
-      </a>
-      <a href="#" class="video-link">
-        <div class="fake-video"><div class="loader"></div></div>
-      </a>
-      <a href="#" class="video-link">
-        <div class="fake-video"><div class="loader"></div></div>
-      </a>
+    <div class="video-grid" id="videoGrid">
+      <!-- Fake Video Thumbnails -->
+      <!-- Will be injected via JS -->
     </div>
-
   </div>
 
-  <script src="scripts.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
