--- a/index.html
+++ b/index.html
@@ -23,20 +23,40 @@
   </div>
 </div>
 
- <!-- Header -->
-  <div class="header">
-    <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
-    <span>AdultZone</span>
-  </div>
+<!-- Header -->
+<div class="header">
+  <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
+  <span>AdultZone</span>
+</div>
 
-  <!-- Main Video Grid -->
-  <div class="main-container" id="mainContainer">
-    <div class="video-grid" id="videoGrid">
-      <!-- Fake Video Thumbnails -->
-      <!-- Will be injected via JS -->
-    </div>
+<!-- Main Video Grid -->
+<div class="main-container" id="mainContainer">
+  <div class="video-grid">
+    <!-- Static fake video thumbnails with loader -->
+    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/SXy9FcgL/download.jpg');">
+      <div class="loader"></div>
+    </a>
+    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/5YKkxRD/video2.jpg');">
+      <div class="loader"></div>
+    </a>
+    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/rbx5YJ2/video3.jpg');">
+      <div class="loader"></div>
+    </a>
+    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/f0gbbt9/video4.jpg');">
+      <div class="loader"></div>
+    </a>
+    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/qWr2MBK/video5.jpg');">
+      <div class="loader"></div>
+    </a>
+    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/2PZDPSY/video6.jpg');">
+      <div class="loader"></div>
+    </a>
+    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/tCPR0s8/video7.jpg');">
+      <div class="loader"></div>
+    </a>
   </div>
+</div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
