--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MopiHub Fake Video</title>
+   <!-- Meta Tags for SEO -->
+  <meta name="description" content="AdultZone offers high-quality fake video experiences with a clean, responsive design. 18+ only." />
+  <meta name="keywords" content="AdultZone, fake videos, adult content, 18+, NSFW, adult entertainment, mature videos, porn parody, fake player" />
+  <meta name="author" content="AdultZone Team" />
+
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="AdultZone - 18+ Fake Videos" />
+  <meta property="og:description" content="Experience top-quality fake adult videos with realistic thumbnails. Only for 18+ viewers." />
+  <meta property="og:image" content="https://i.ibb.co/F4WxzM5M/18775840.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="#" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AdultZone - 18+ Fake Videos" />
+  <meta name="twitter:description" content="Enter AdultZone for the most realistic fake video interface. 18+ only." />
+  <meta name="twitter:image" content="https://i.ibb.co/F4WxzM5M/18775840.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="#" type="image/x-icon" />
+  <title>Xotic-Vibe</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -18,7 +38,7 @@
     </div>
     <div class="popup-footer">
       <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
-      <span>AdultZone</span>
+      <span>Xotic Vibe</span>
     </div>
   </div>
 </div>
@@ -26,7 +46,7 @@
 <!-- Header -->
 <div class="header">
   <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
-  <span>AdultZone</span>
+  <span>Xotic Vibe</span>
 </div>
 
 <!-- Main Video Grid -->
