--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
    <!-- Meta Tags for SEO -->
-  <meta name="description" content="AdultZone offers high-quality fake video experiences with a clean, responsive design. 18+ only." />
-  <meta name="keywords" content="AdultZone, fake videos, adult content, 18+, NSFW, adult entertainment, mature videos, porn parody, fake player" />
+  <meta name="description" content="AdultZone offers high-quality hot video experiences with a clean, responsive design. 18+ only." />
+  <meta name="keywords" content="AdultZone, Hot videos, adult content, 18+, NSFW, adult entertainment, mature videos, porn parody, Video player" />
   <meta name="author" content="AdultZone Team" />
 
   <!-- Open Graph Meta Tags for Social Media -->
   <meta property="og:title" content="AdultZone - 18+ Fake Videos" />
-  <meta property="og:description" content="Experience top-quality fake adult videos with realistic thumbnails. Only for 18+ viewers." />
+  <meta property="og:description" content="Experience top-quality adult videos with best thumbnails. Only for 18+ viewers." />
   <meta property="og:image" content="https://i.ibb.co/F4WxzM5M/18775840.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="#" />
@@ -18,7 +18,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="AdultZone - 18+ Fake Videos" />
-  <meta name="twitter:description" content="Enter AdultZone for the most realistic fake video interface. 18+ only." />
+  <meta name="twitter:description" content="Enter AdultZone for the most realistic hot video interface. 18+ only." />
   <meta name="twitter:image" content="https://i.ibb.co/F4WxzM5M/18775840.png" />
 
   <!-- Favicon -->
