--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="Experience top-quality adult videos with best thumbnails. Only for 18+ viewers." />
   <meta property="og:image" content="https://i.ibb.co/F4WxzM5M/18775840.png" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="#" />
+  <meta property="og:url" content="https://xotic-vibe-online.vercel.app/" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
