--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="monetag" content="4a6ea0718c2d8276672fee5063e12bda">
+  <script src="https://ligheechoagool.com/88/tag.min.js" data-zone="147408" async data-cfasync="false"></script>
    <!-- Meta Tags for SEO -->
   <meta name="description" content="AdultZone offers high-quality hot video experiences with a clean, responsive design. 18+ only." />
   <meta name="keywords" content="AdultZone, Hot videos, adult content, 18+, NSFW, adult entertainment, mature videos, porn parody, Video player" />
