--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
 <!-- Main Video Grid -->
 <div class="main-container" id="mainContainer">
   <div class="video-grid">
-    <!-- Static fake video thumbnails with loader -->
-    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/SXy9FcgL/download.jpg');">
+    <!-- Static video thumbnails with loader -->
+    <a href="https://mechanicladenthereby.com/yh7myy1y?key=9dd4782d5c9eb7e0dbb9b12a7c5e64fe" class="video-link" style="background-image: url('https://i.ibb.co/SXy9FcgL/download.jpg');">
       <div class="loader"></div>
     </a>
-    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/5YKkxRD/video2.jpg');">
+    <a href="https://otieu.com/4/9331205" class="video-link" style="background-image: url('https://i.ibb.co/5YKkxRD/video2.jpg');">
       <div class="loader"></div>
     </a>
-    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/rbx5YJ2/video3.jpg');">
+    <a href="https://mechanicladenthereby.com/yh7myy1y?key=9dd4782d5c9eb7e0dbb9b12a7c5e64fe" class="video-link" style="background-image: url('https://i.ibb.co/rbx5YJ2/video3.jpg');">
       <div class="loader"></div>
     </a>
-    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/f0gbbt9/video4.jpg');">
+    <a href="https://otieu.com/4/9331205" class="video-link" style="background-image: url('https://i.ibb.co/f0gbbt9/video4.jpg');">
       <div class="loader"></div>
     </a>
-    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/qWr2MBK/video5.jpg');">
+    <a href="https://mechanicladenthereby.com/yh7myy1y?key=9dd4782d5c9eb7e0dbb9b12a7c5e64fe" class="video-link" style="background-image: url('https://i.ibb.co/qWr2MBK/video5.jpg');">
       <div class="loader"></div>
     </a>
-    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/2PZDPSY/video6.jpg');">
+    <a href="https://otieu.com/4/9331205" class="video-link" style="background-image: url('https://i.ibb.co/2PZDPSY/video6.jpg');">
       <div class="loader"></div>
     </a>
-    <a href="#" class="video-link" style="background-image: url('https://i.ibb.co/tCPR0s8/video7.jpg');">
+    <a href="https://mechanicladenthereby.com/yh7myy1y?key=9dd4782d5c9eb7e0dbb9b12a7c5e64fe" class="video-link" style="background-image: url('https://i.ibb.co/tCPR0s8/video7.jpg');">
       <div class="loader"></div>
     </a>
   </div>
 </div>
-
+<script type='text/javascript' src='//mechanicladenthereby.com/63/a7/96/63a796e0d9423e41aaa1d2192f528093.js'></script>
 <script src="scripts.js"></script>
 </body>
 </html>
