--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
 
 <!-- Header -->
 <div class="header">
-  <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
-  <span>Xotic Vibe</span>
+  <a href="https://otieu.com/4/9331205" target="_blank" rel="noopener noreferrer" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
+    <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
+    <span>Xotic Vibe</span>
+  </a>
 </div>
 
+  
 <!-- Main Video Grid -->
 <div class="main-container" id="mainContainer">
   <div class="video-grid">
