--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <button onclick="denyAccess()">No, take me back</button>
     </div>
     <div class="popup-footer">
-      <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
+      <img src="https://i.postimg.cc/V64DgjHt/46307513f6ccdc96600924ff990a12f9.jpg" alt="Logo">
       <span>Xotic Vibe</span>
     </div>
   </div>
