--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="twitter:image" content="https://i.ibb.co/F4WxzM5M/18775840.png" />
 
   <!-- Favicon -->
-  <link rel="icon" href="#" type="image/x-icon" />
+  <link rel="icon" href="https://i.postimg.cc/02K0KRxD/images.jpg" type="image/x-icon" />
   <title>Xotic-Vibe</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -39,7 +39,8 @@
       <button onclick="denyAccess()">No, take me back</button>
     </div>
     <div class="popup-footer">
-      <img src="https://i.postimg.cc/V64DgjHt/46307513f6ccdc96600924ff990a12f9.jpg" alt="Logo">
+      <img src="https://i.postimg.cc/V64DgjHt/46307513f6ccdc96600924ff990a12f9.jpg
+" alt="Logo">
       <span>Xotic Vibe</span>
     </div>
   </div>
