--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       <button onclick="denyAccess()">No, take me back</button>
     </div>
     <div class="popup-footer">
-      <img src="https://i.postimg.cc/V64DgjHt/46307513f6ccdc96600924ff990a12f9.jpg
-" alt="Logo">
+      <img src="https://i.postimg.cc/02K0KRxD/images.jpg">
       <span>Xotic Vibe</span>
     </div>
   </div>
@@ -49,7 +48,7 @@
 <!-- Header -->
 <div class="header">
   <a href="https://otieu.com/4/9331205" target="_blank" rel="noopener noreferrer" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
-    <img src="https://i.ibb.co/F4WxzM5M/18775840.png" alt="Logo">
+    <img src="https://i.postimg.cc/V64DgjHt/46307513f6ccdc96600924ff990a12f9.jpg" alt="Logo">
     <span>Xotic Vibe</span>
   </a>
 </div>
