--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Open Graph Meta Tags for Social Media -->
   <meta property="og:title" content="AdultZone - 18+ Fake Videos" />
   <meta property="og:description" content="Experience top-quality adult videos with best thumbnails. Only for 18+ viewers." />
-  <meta property="og:image" content="https://i.ibb.co/F4WxzM5M/18775840.png" />
+  <meta property="og:image" content="https://i.ibb.co/BX3WwqR/Untitled-design-2.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://xotic-vibe-online.vercel.app/" />
 
@@ -21,10 +21,10 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="AdultZone - 18+ Fake Videos" />
   <meta name="twitter:description" content="Enter AdultZone for the most realistic hot video interface. 18+ only." />
-  <meta name="twitter:image" content="https://i.ibb.co/F4WxzM5M/18775840.png" />
+  <meta name="twitter:image" content="https://i.ibb.co/BX3WwqR/Untitled-design-2.png" />
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.postimg.cc/02K0KRxD/images.jpg" type="image/x-icon" />
+  <link rel="icon" href="https://i.ibb.co/M0XZzbZ/13750206.png" type="image/x-icon" />
   <title>Xotic-Vibe</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -39,7 +39,7 @@
       <button onclick="denyAccess()">No, take me back</button>
     </div>
     <div class="popup-footer">
-      <img src="https://i.postimg.cc/02K0KRxD/images.jpg">
+      <img src="https://i.ibb.co/BX3WwqR/Untitled-design-2.png">
       <span>Xotic Vibe</span>
     </div>
   </div>
@@ -48,7 +48,7 @@
 <!-- Header -->
 <div class="header">
   <a href="https://otieu.com/4/9331205" target="_blank" rel="noopener noreferrer" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
-    <img src="https://i.postimg.cc/V64DgjHt/46307513f6ccdc96600924ff990a12f9.jpg" alt="Logo">
+    <img src="https://i.ibb.co/BX3WwqR/Untitled-design-2.png" alt="Logo">
     <span>Xotic Vibe</span>
   </a>
 </div>
