--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="monetag" content="4a6ea0718c2d8276672fee5063e12bda">
+  <meta name="google-site-verification" content="L4K0iXadDGwbkabCK3DOJyNlPDYAnVi_T-3UBpA9Z6k" />
   <script src="https://ligheechoagool.com/88/tag.min.js" data-zone="147408" async data-cfasync="false"></script>
    <!-- Meta Tags for SEO -->
   <meta name="description" content="AdultZone offers high-quality hot video experiences with a clean, responsive design. 18+ only." />
